# Projet-Isola

./: .gitignore  CMakeLists.txt  README.md  display.c  display.h  main.c  network_core.c
client/: client.py  network.py  protocol_constants.py  requirements.txt
include/: config.h  network_core.h  protocol.h  server.h  sqlite_utils.h
server/: CMakeLists.txt
server/include/: auth.h  config.h  game.h  matchmaking.h  network_core.h  protocol.h  server.h  sqlite_utils.h
server/src/: auth.c  game.c  main.c  matchmaking.c  network_core.c  sqlite_utils.c
src/: main.c  network_core.c  sqlite_utils.c
